# parallel-dev-mcp

./: .clauderc  .gitignore  .mcp.json  .tmux.conf  .tmux.conf.elite  AGENTS.md  ARCHITECTURE_REFACTORING_REPORT.md  CLAUDE.md  CLAUDE_GO.md  ELITE_TMUX_README.md  FINAL_ARCHITECTURE_SIMPLIFICATION.md  MCP_TOOLS_OVERVIEW.md  PRD_COMPLIANCE_REVIEW.md  RATE_LIMIT_SYSTEM_REPORT.md  README.md  REVIEW_REPORT.md  TMUX_GUIDE.md  child.txt  emergency_fix.sh  install_tmux_elite.sh  master.txt  master_info.json  mcp.json  mcp_template.json  package-lock.json  package.json  pyproject.toml  send.txt  session_id.txt  test-sdk-runner.ts  test-tmux-executor.ts  test_claude_hooks.sh  test_integrated_system.py  tsconfig.json  tsconfig.test.json  vitest.config.ts
.claude/: settings.json  settings.local.json
.paralleldev/: config.json  state.json
.pdev/: state.json
.taskmaster/: config.json  state.json
.tmuxp/: .gitkeep
claude_template/: CLAUDE.md  CLAUDE_fronted.md  CLAUDE_java.md
claudedocs/: PARALLEL_EXECUTOR_VERIFICATION.md
config/: .gitkeep
docs/: README.md  best-practices.md  claude-code-integration.md  claude-code-setup-steps.md  mcp-tools-demo.py  project-summary-and-roadmap.md  session-monitoring-design.md  task12-completion-report.md  tmux_claude_hooks_prd.md  troubleshooting-guide.md  usage-examples.md  usage-guide.md  user-story-master-session-coordinator.md  worktree-auto-merge-design.md
examples/: README.md  web_message_sender-v2.py
paralleldev-plugin/: .mcp.json
plans/: mcp-config-fix.md  paralleldev-rebuild-implementation.md  paralleldev-rebuild-spec.md
scripts/: .gitkeep  cleanup_DEMO_TEST.sh  (+13 more)
(+305 files in other folders)
